- respect plugin sort order
- use init plugins only for storefront
- rename getCurrencyId() to getCurrencyCode() where appropriate to reflect the
  fact that we are dealing with the code rather than the id
- refactored tax calculation; this includes:
  * removed zm_add_tax() and zm_get_tax_rate()
	* added new ZMTaxRates service ($zm_taxes)
	* taxRate is now of type ZMTaxRate rather than float

Release 0.8.5
- add 'php_flag register_globals off' to main .htaccess file
- fix wrong price when product is free and sale/special set
- streamlined some ZMProducts SQL to make the results more uniform (different
  lookups would result in different product attributes populated)
- added ZMProduct::getAverageRating() convenience method
- add missing URL mappings for popups
- rename setting isEchoJSON to isJSONEcho and add isJSONHeader setting to
  allow to return onr or the other or both; default is now to echo
- set crumbtrail in POST processing for create_account
- added new plugin loader support mode 'FOLDER'; this is similar to 'ALL',
  just not recursive which is handy if you want to include PHP files that can't
  be added to core.php
- enable session handling in external.php to be able to read the account type
  from the session data
- added new setting 'templateSuffix' with default of '.php'
- refactor ZenMagick's .htaccess files using Limt rather than LimitExcept
- added ZMTheme::themeFileContents(..)
- added experimental plugin that allows to use the Smarty templating engine
  for themes
- after a successful registration, redirect to the protected page requested
  before (if any), same as login
- change all packages to org.zenmagick, update all references to homepage, etc
  to zenmagick.org
- cleanup category JS code and move to common.js
- fix broken product_reviewsd_info.php
- do not append store name to tile for homepage
- fix cart id compatibility issue with Ajax addProduct
- use loader to create ZMEmailView instances